<?xml version="1.0"?>
<package>
    <name>ndt_mapping</name>
    <version>1.2.3</version>
    <description>The mapping package</description>
    <maintainer email="leo_1@163.com">leofansq</maintainer>
    <license>Apache2</license>
    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>roscpp</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>nav_msgs</build_depend>
    <build_depend>tf</build_depend>
    <build_depend>pcl_ros</build_depend>
    <build_depend>sensor_msgs</build_depend>

    <build_depend>pcl_conversions</build_depend>
    <build_depend>message_filters</build_depend>

    <build_depend>libpcl-all-dev</build_depend>
    <build_depend>eigen</build_depend>

    <run_depend>roscpp</run_depend>
    <run_depend>std_msgs</run_depend>
    <run_depend>nav_msgs</run_depend>
    <run_depend>tf</run_depend>
    <run_depend>pcl_ros</run_depend>
    <run_depend>sensor_msgs</run_depend>

    <run_depend>pcl_conversions</run_depend>
    <run_depend>message_filters</run_depend>

    <run_depend>libpcl-all</run_depend>
    <run_depend>eigen</run_depend>

    <export>
    </export>
</package>
